Fix margins on mobile

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -196,6 +196,8 @@
     }
 
     .Home-Content {
+        margin-top: 40px;
+
         grid-template-columns: auto;
     }
 }
